# Avalanche_Faucet

./: .env.example  Cargo.toml  README.md  vercel.json
src/: main.rs
