[package]
name = "avalanche-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0.2" }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
axum = "0.6.0"
# hyper = { version = "0.14", features = ["full"] }
serde = "1.0.202"
serde_json = "1.0.91"
web3 = "0.15.0"
thiserror = "1.0.40"
primitive-types = "0.12.2"
rust_decimal = "1.20"
rust_decimal_macros = "1.20"

[source.crates-io]
registry = "https://mirrors.ustc.edu.cn/crates.io-index"
